# zeno

./: .gitignore  LICENSE  PROCESS_FLOW.md  README.md  alembic.ini  pyproject.toml  test_lead_agent.py  test_worker_agent.py
chanakya/agents/: base.py  models.py  registry.py
chanakya/agents/lead/: adapter.py  composer.py  renderer.py
chanakya/agents/lead/prompts/layers/: identity.md  (+4 more)
chanakya/agents/worker/: gemini.py
chanakya/arthashastra/: __init__.py  base.py  models.py  registry.py  smoke_test.py
chanakya/arthashastra/adaptors/: __init__.py  gemini.py
chanakya/arthashastra/utils/: process.py  tokenizer.py
chanakya/cli/: display.py  input.py  main.py
chanakya/core/: __init__.py  config.py  enums.py  mode.py
chanakya/db/: __init__.py  engine.py  models.py  repository.py  smoke_test.py
chanakya/db/migrations/: env.py
chanakya/db/migrations/versions/: 2f6d1a4b8c0d_add_wings_and_rooms_tables.py  4a8b1d2c3e9f_add_orchestrator_state_to_sessions.py
chanakya/memory/: __init__.py  models.py  palace.py  retrieval.py  smoke_test.py  store.py
chanakya/orchestrator/: core.py  dispatch.py  errors.py  git.py  planner.py  session.py  smoke_phase6.py
chanakya/utils/: display.py
zeno/agents/: base.py  models.py  registry.py
zeno/agents/lead/: adapter.py  composer.py  renderer.py
zeno/agents/worker/: adapter.py  composer.py  gemini.py
zeno/cli/: display.py  input.py  main.py
zeno/core/: __init__.py  config.py  enums.py  logging.py  mode.py
zeno/db/: __init__.py  engine.py  models.py  repository.py  smoke_test.py
zeno/db/migrations/: env.py
zeno/db/migrations/versions/: 1b2c3d4e5f70_update_task_metrics_for_worker_metrics.py  2c3d4e5f6a71_drop_agent_provider_mode_add_lead_session_id.py  2f6d1a4b8c0d_add_wings_and_rooms_tables.py  3a5b7c9d1e0f_agents_type_freeform_string.py  9c1f2a7d4b0e_add_worktree_fields_to_tasks.py  a1b2c3d4e5f6_rename_session_mode_to_execution_mode.py  b4c6d8e0f2a1_tasks_type_freeform_string.py  b86554c1b399_initial_schema.py  d7e8f9a0b1c2_rename_legacy_tables.py  f3d402b3bd47_agents_table_assignment_refactor.py
zeno/memory/: __init__.py  mind.py  models.py  retrieval.py  smoke_test.py  store.py
zeno/orchestrator/: core.py  dispatch.py  errors.py  git.py  planner.py  session.py  smoke_phase6.py
zeno/utils/: display.py
(+8 files in other folders)
