[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chanakya"
version = "0.1.0"
description = "Chanakya - A multi-agent orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Vinayak Baghel" }]
dependencies = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "rich>=13.0.0",
  "sentencepiece>=0.2.0",
  "typer>=0.12.0",
]

[project.scripts]
chanakya = "chanakya.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["chanakya"]

