[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeno"
version = "0.1.0"
description = "Zeno - A multi-agent orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Vinayak Baghel" }]
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "claude-agent-sdk",
  "chromadb>=0.5.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "rich>=13.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "typer>=0.12.0",
]

[project.scripts]
zeno = "zeno.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["zeno"]

# Include Alembic template file in the built wheel
[tool.hatch.build.targets.wheel.force-include]
"zeno/db/migrations/script.py.mako" = "zeno/db/migrations/script.py.mako"

